--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ python-dateutil==2.8.1
 python-stdnum==1.13
 python3-openid==3.1.0
 pytz==2018.5
+rauth==0.7.3
 requests==2.22.0
 requests-oauthlib==1.3.0
 scikit-learn==0.23.1
